import java.text.SimpleDateFormat

plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.jetbrains.kotlin.jvm'
    id 'maven-publish'
}

apply from: rootProject.file('publish.gradle')

group = 'cn.qfys521'
version = '1.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {

    annotationProcessor('org.projectlombok:lombok:1.18.28')
    compileOnly('org.projectlombok:lombok:1.18.28')
    implementation('com.fasterxml.jackson.core:jackson-databind:2.15.3')
    implementation('com.fasterxml.jackson.core:jackson-core:2.15.3')
    implementation('io.github.kloping:bot-qqpd-java:1.5.0')
    implementation(platform('com.squareup.okhttp3:okhttp-bom:4.10.0'))
    implementation("com.squareup.okhttp3:okhttp")
    implementation("com.squareup.okhttp3:logging-interceptor")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.28")
    testCompileOnly('org.projectlombok:lombok:1.18.28')
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

test {
    useJUnitPlatform()
}
java {
    targetCompatibility = JavaVersion.VERSION_17
    sourceCompatibility = JavaVersion.VERSION_17
}
kotlin {
    jvmToolchain(17)
}
shadowJar {
    manifest {
        attributes.put("Project", gradle.getRootProject().getName())
        attributes.put("Implementation-Version", archiveVersion)
        attributes.put("Main-Class", "cn.qfys521.bot.BotApplication")
        attributes.put("JavaVersion", JavaVersion.VERSION_17)
        attributes.put("Build-Date", new SimpleDateFormat("yyyy-MM-dd hh:mm:ss").format(new Date()))
        attributes.put("Github", 'https://www.github.com/codethink-cn/qqbot')
        attributes.put("LICENSE", "AGPL-3.0")
        attributes.put("Build-Script", "Gradle")
        attributes.put("Build-Script-Version", gradle.gradleVersion)
    }
}

publish.mustRunAfter {
    shadowJar
}
publish.doLast {
    delete rootProject.buildDir
    println("流程结束")
}